--- a/app/src/main/res/layout/activity_sun_menu.xml
+++ b/app/src/main/res/layout/activity_sun_menu.xml
@@ -8,7 +8,6 @@
 
     <Button
         android:id="@+id/buttonLearnMoreSunInformation"
-        style="@style/Button.Orange"
         android:layout_width="174dp"
         android:layout_height="47dp"
         android:text="@string/learn_more"
@@ -21,7 +20,6 @@
 
     <Button
         android:id="@+id/buttonLearnMoreSolarMissions"
-        style="@style/Button.Orange"
         android:layout_width="174dp"
         android:layout_height="47dp"
         android:text="@string/learn_more"
@@ -92,58 +90,60 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="wrap_content"
+                android:id="@+id/sunImage1"
+                android:layout_width="@dimen/width_picture_in_gallery"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:contentDescription="@string/placeholder"
                 android:minWidth="15dp"
                 android:visibility="visible"
-                tools:srcCompat="@tools:sample/avatars" />
+                app:srcCompat="@drawable/sun_image_1_small"
+                tools:srcCompat="@drawable/sun_image_1_small" />
 
             <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="wrap_content"
+                android:id="@+id/sunImage2"
+                android:layout_width="@dimen/width_picture_in_gallery"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:contentDescription="@string/placeholder"
                 android:minWidth="15dp"
                 android:visibility="visible"
-                tools:srcCompat="@tools:sample/avatars" />
+                app:srcCompat="@drawable/sun_image_2_small"
+                tools:srcCompat="@drawable/sun_image_2_small" />
 
             <ImageView
-                android:id="@+id/imageView8"
-                android:layout_width="wrap_content"
+                android:id="@+id/sunImage3"
+                android:layout_width="@dimen/width_picture_in_gallery"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:contentDescription="@string/placeholder"
                 android:minWidth="15dp"
                 android:visibility="visible"
-                tools:srcCompat="@tools:sample/avatars" />
+                app:srcCompat="@drawable/sun_image_3_small"
+                tools:srcCompat="@drawable/sun_image_3_small" />
 
             <ImageView
-                android:id="@+id/imageView9"
-                android:layout_width="wrap_content"
+                android:id="@+id/sunImage4"
+                android:layout_width="@dimen/width_picture_in_gallery"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:contentDescription="@string/placeholder"
                 android:minWidth="15dp"
                 android:visibility="visible"
-                tools:srcCompat="@tools:sample/avatars" />
+                app:srcCompat="@drawable/sun_image_4_small"
+                tools:srcCompat="@drawable/sun_image_4_small" />
 
             <ImageView
-                android:id="@+id/imageView10"
-                android:layout_width="wrap_content"
+                android:id="@+id/sunImage5"
+                android:layout_width="@dimen/width_picture_in_gallery"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:contentDescription="@string/placeholder"
                 android:minWidth="15dp"
                 android:visibility="visible"
-                tools:srcCompat="@tools:sample/avatars" />
+                app:srcCompat="@drawable/sun_image_5_small"
+                tools:srcCompat="@drawable/sun_image_5_small" />
 
-            <ImageView
-                android:id="@+id/imageView11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:minWidth="15dp"
-                android:visibility="visible"
-                tools:srcCompat="@tools:sample/avatars" />
         </LinearLayout>
     </HorizontalScrollView>
 
