Fixed the clipping, made the detailed view on Pioneer and Helios probes meant to study The Sun

--- a/app/src/main/res/layout/fragment_past_research_sun_missions.xml
+++ b/app/src/main/res/layout/fragment_past_research_sun_missions.xml
@@ -2,7 +2,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".PastResearchSunMissions">
 
     <LinearLayout
@@ -11,16 +11,40 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/pioneerSeriesTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="@string/pioneer_program"
+            android:textAlignment="center"
+            android:textColor="@android:color/background_dark"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/pioneerSeriesText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="@string/pioneer_program_text"
+            android:textAlignment="center"
+            android:textColor="@android:color/background_dark" />
+
+        <TextView
+            android:id="@+id/HeliosSeriesTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/helios_program"
+            android:textAlignment="center"
+            android:textColor="@android:color/background_dark"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/heliosSeriesText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/helios_program_text"
+            android:textAlignment="center"
+            android:textColor="@android:color/background_dark" />
 
         <TextView
             android:id="@+id/textView6"
