Added the menu for Venus as well as details view, pictures of it and finished mercury missions, both present and past.

--- a/app/src/main/res/layout/fragment_ongoing_research_sun_missions.xml
+++ b/app/src/main/res/layout/fragment_ongoing_research_sun_missions.xml
@@ -32,7 +32,7 @@
             android:id="@+id/sohoProgramTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/helios_program"
+            android:text="@string/soho_program"
             android:textAlignment="center"
             android:textColor="@android:color/background_dark"
             android:textSize="18sp"
