--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -110,10 +110,21 @@
         android:layout_width="121dp"
         android:layout_height="46dp"
         android:text="@string/dwarfs"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/othersButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/neptuneButton" />
+
+    <Button
+        android:id="@+id/othersButton"
+        android:layout_width="121dp"
+        android:layout_height="46dp"
+        android:text="@string/others"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dwarfsButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
